<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>SpatialIndexProcessor</groupId>
    <artifactId>SpatialIndexProcessor</artifactId>
    <version>0.0.2-SNAPSHOT</version>
    <build>
        <sourceDirectory>src</sourceDirectory>
        <testSourceDirectory>test</testSourceDirectory>
        <resources>
            <resource>
                <directory>src</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>test</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.1</version>
                <configuration>
                    <source/>
                    <target/>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>2.4.3</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>
    <properties>
        <geotk.version>5.0-SNAPSHOT</geotk.version>
        <sis.version>0.8-jdk7-M1</sis.version>
        <geoapi.version>4.0-M05</geoapi.version>
        <geotools.version>21.0</geotools.version>
        <!--<sis.version>1.0-SNAPSHOT</sis.version>-->
        <jena.version>3.10.0</jena.version>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-core</artifactId>
            <version>${jena.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.jena</groupId>
            <artifactId>jena-arq</artifactId>
            <version>${jena.version}</version>
        </dependency>
        <dependency>
            <groupId>commons-dbcp</groupId>
            <artifactId>commons-dbcp</artifactId>
            <version>1.4</version>
        </dependency>
        <dependency>
            <groupId>com.github.davidmoten</groupId>
            <artifactId>geo</artifactId>
            <version>0.7.1</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-client-wcs</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-client-csw</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-feature-csv</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-xml-citygml</artifactId>
            <version>${geotk.version}</version>
        </dependency>

        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-client-wms</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-client-osm</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-coverage-geotiff</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-client-wfs</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-feature-shapefile</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-feature</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-utility</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-feature-geojson</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-feature-kml</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-feature-osm</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.geotoolkit</groupId>
            <artifactId>geotk-logging-commons</artifactId>
            <version>${geotk.version}</version>
        </dependency>
        <dependency>
            <groupId>org.opengis</groupId>
            <artifactId>geoapi</artifactId>
            <version>${geoapi.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.sis.core</groupId>
            <artifactId>sis-feature</artifactId>
            <version>${sis.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.sis.core</groupId>
            <artifactId>sis-metadata</artifactId>
            <version>${sis.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.sis.core</groupId>
            <artifactId>sis-utility</artifactId>
            <version>${sis.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.sis.core</groupId>
            <artifactId>sis-referencing</artifactId>
            <version>${sis.version}</version>
        </dependency>
        <dependency>
            <groupId>org.apache.sis.non-free</groupId>
            <artifactId>sis-epsg</artifactId>
            <version>0.7</version>
            <scope>runtime</scope>
        </dependency>
        <!--
        <dependency>
            <groupId>org.apache.sis.core</groupId>
            <artifactId>sis-referencing</artifactId>
            <version>${sis.version}</version>
        </dependency>
        -->
        <dependency>
            <groupId>io.github.galbiston</groupId>
            <artifactId>geosparql-jena</artifactId>
            <version>1.0.7</version>
        </dependency>
    </dependencies>

    <repositories>
        <repository>
            <id>osgeo</id>
            <name>Open Source Geospatial Foundation Repository</name>
            <url>http://download.osgeo.org/webdav/geotools/</url>
        </repository>
        <repository>
            <id>geosolutions</id>
            <name>Geosolutions</name>
            <url>http://maven.geo-solutions.it/</url>
        </repository>
        <repository>
            <id>geotoolkit</id>
            <name>Geotk repository</name>
            <url>http://maven.geotoolkit.org</url>
        </repository>
    </repositories>
</project>
